# the-searchers-final-project

./: CMakeLists.txt  README.md
Documentation/: GitHub Project Setup and Final Deliverables Roles.docx  Steps to Integrate Remaining Assignments into GitHub.docx  Test Cases.docx
Documentation/Project 3a/: Document 1.docx  Project3a Proposals.docx
data/: data_100k_random.txt  data_100k_sparse.txt  data_large_duplicates.txt  data_mixed_invalid.txt  data_negative_numbers.txt  data_small_invalid.txt
scripts/: data_100k_large_duplicates.py  data_100k_random.py  data_100k_sorted_asc.py  data_100k_sorted_desc.py  data_100k_sparse.py  data_negative_numbers.py
src/: ProjectUtils.h  main.cpp
